<resources>
    <string name="app_name">My Application</string>
    <string name="enter_text">Войти</string>
    <string name="banks_text">Отделения и банкоматы</string>
    <string name="valuts">Курсы валют</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="title_name">WorkdSkills Bank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>