<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/museum"
        android:id="@+id/titleimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/titleimage"
        android:text="@string/title_name"
        android:textColor="@color/purple_200"
        android:textSize="30dp" />

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleimage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/banks_btn_style"
            android:onClick="kk">

            <ImageView
                android:id="@+id/banks_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/banks2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/banks_image"
                android:text="@string/banks_text"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/button2"
            android:layout_below="@id/button1"
            android:layout_marginTop="20dp"
            android:background="@drawable/banks_btn_style"
            android:onClick="ll">

            <ImageView
                android:id="@+id/banks_images"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/banks2" />

            <TextView
                android:id="@+id/valuts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banks_images"
                android:layout_toRightOf="@id/banks_images"
                android:text="@string/eur"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/valuts_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banks_images"
                android:layout_toRightOf="@id/valuts"
                android:text="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/banks_images"
                android:text="@string/valuts"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="date" />

            <TextView
                android:id="@+id/valuts2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banks_images"
                android:layout_toLeftOf="@id/valuts_num2"
                android:text="@string/usd"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/valuts_num2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banks_images"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="10" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@id/rel1"
        android:layout_height="100dp">

        <ImageButton
            android:id="@+id/btnent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/enter_style"
            android:onClick="onClick" />
        <TextView
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:text="@string/enter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>